--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "cd ../olive-uikit && yarn && yarn build",
+    "linkUI": "cd ../olive-uikit && yarn link && cd ../olive-frontend && yarn link \"@pancakeswap-libs/uikit\"",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
